# investo-platform

./: .coveragerc  .env.example  .gitignore  Makefile  Procfile  conftest.py  measure_endpoints.py  pyproject.toml  pytest.ini  quick_verify.py  schema.yml  seed.py  seed_data.py  test_chat.py  test_chat_2.py  test_chat_3.py
.agents/rules/: dual-terminal-workflow.md  investo.md
.agents/workflows/: debug-issue.md  project-status.md  resume-work.md
.github/workflows/: ci.yml
apps/accounts/: admin.py  apps.py  managers.py  models.py  repositories.py  serializers.py  services.py  signals.py  tasks.py  urls.py  validators.py  views.py
apps/activity_feed/: admin.py  apps.py  consumers.py  models.py  repositories.py  serializers.py  services.py  urls.py  views.py
apps/analytics/: repositories.py  serializers.py  services.py  urls.py  views.py
apps/billing/: admin.py  models.py  repositories.py  serializers.py  services.py  urls.py  views.py
apps/chat/: admin.py  consumers.py  models.py  repositories.py  serializers.py  services.py  urls.py  views.py
apps/common/: email_service.py  exceptions.py  managers.py  pagination.py  permissions.py  throttles.py  utils.py  validators.py  views.py
apps/data_room/: admin.py  apps.py  models.py  repositories.py  serializers.py  services.py  urls.py  views.py
apps/files/: apps.py  storage.py
apps/investments/: admin.py  consumers.py  models.py  repositories.py  serializers.py  services.py  urls.py  views.py
apps/matching/: admin.py  (+8 more)
config/: asgi.py  celery.py  routing.py  urls.py
docker/: Dockerfile.celery  Dockerfile.celery-beat  Dockerfile.django  Dockerfile.nginx  docker-compose.yml
frontend/: next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  verify_fixes.mjs
idea_project/: Procfile  manage.py  requirements.txt
nginx/: nginx.conf
requirements/: base.txt  development.txt  production.txt
scripts/: parse_schema.py  test_auth.py  test_startup_crud.py
(+262 files in other folders)
