[project]
name = "investo"
version = "2.0.0"
description = "Startup Ecosystem Platform - Connecting Entrepreneurs and Investors"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "ARG"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["apps"]
pythonpath = ["."]
DJANGO_SETTINGS_MODULE = "config.settings.testing"

[tool.coverage.run]
source = ["apps"]
branch = true
omit = ["*/tests/*", "*/migrations/*", "*/__pycache__/*", "*/management/*"]

[tool.coverage.report]
exclude_also = [
    "def __str__",
    "def __repr__",
    "class Meta",
    "if __name__",
    "def get_queryset",
    "def get_serializer_class",
]

[tool.coverage.html]
directory = "coverage_html"
